starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__enum_variants_comma_separated.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\nenum Message {\n    Ping,\n    Pong { x: i64     },\n}\n"
---
enum Message {
    Ping,
    Pong {
        x: i64
    },
}
