starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__expressions.snap
---
source: starstream-compiler/src/formatter.rs
assertion_line: 381
description: "Code:\n\nfn main() {\n    let mut value      = -(-5);\n    value = (1 + 2) * (3 - 4) / 5;\n    value = value + (10 / (3 + 2));\n    result = (1 + 2 == 3) && !(false || true);\n}\n"
---
fn main() {
    let mut value = -(-5);
    value = (1 + 2) * (3 - 4) / 5;
    value = value + (10 / (3 + 2));
    result = (1 + 2 == 3) && !(false || true);
}
