starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__function_call_simple.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\nfn add(a: i64, b: i64) -> i64 {\n    a + b\n}\n\nfn main() {\n    let result = add(1, 2);\n}\n"
---
fn add(a: i64, b: i64) -> i64 {
    a + b
}

fn main() {
    let result = add(1, 2);
}
