starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__import_named.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\nimport {   blockHeight,   now   } from starstream:std/cardano;\n\nfn main() {}\n"
---
import { blockHeight, now } from starstream:std/cardano;

fn main() { }
