starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__import_namespace.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\nimport context from starstream:std;\n\nfn main() {}\n"
---
import context from starstream:std;

fn main() { }
