starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__import_path_named.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\nimport {   add  ,  Point   } from \"./helpers/math.star\";\n\nfn main() {}\n"
---
import { add, Point } from "./helpers/math.star";

fn main() { }
