starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__import_path_namespace.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\nimport math from \"./helpers/math.star\";\n\nfn main() {}\n"
---
import math from "./helpers/math.star";

fn main() { }
