starstream-compiler/src/snapshots/starstream_compiler__formatter__tests__import_with_alias.snap
---
source: starstream-compiler/src/formatter.rs
description: "Code:\n\nimport {   blockHeight   as   height   } from starstream:std/cardano;\n\nfn main() {}\n"
---
import { blockHeight as height } from starstream:std/cardano;

fn main() { }
